--- a/public/styles/content.module.css
+++ b/public/styles/content.module.css
@@ -1,5 +1,5 @@
 .content {
-  font-family: "Ubuntu", sans-serif;
+  font-family:  'Jost', sans-serif;
   color: #222;
   font-weight: 200;
 }
@@ -60,6 +60,7 @@
   font-size: 85%;
   padding: 0.2em 0.4em;
   margin: 0;
+  color: #D96565;
   background-color: rgba(27, 31, 35, 0.05);
   border-radius: 3px;
 }
