--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
 
 html,
 body {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Jost", sans-serif;
   background-color: #fff;
   color: #222;
   font-weight: 200;
