add global-env-vars.mdx post switch to break-words instead of break-all

--- a/public/styles/post-content.css
+++ b/public/styles/post-content.css
@@ -4,7 +4,7 @@
 
     .content {
         font-family:  "Jost", sans-serif;
-        @apply break-all
+        @apply break-words
     }
 
     .content p {
