improve spacing of code examples

--- a/public/styles/post-content.css
+++ b/public/styles/post-content.css
@@ -47,7 +47,8 @@
         @apply text-lg;
     }
 
-    .content .rich-content {
+    .content .rich-content,
+    .content .remark-highlight {
         @apply mb-4;
     }
 
